results/SVCOMP/4-shot/log-ExSymExe28-2024_03_18_19_31_46.txt
class Main {

  //@ ensures \result <==> (z != x && x == r);
  public static boolean f() {
    int x = 3;
    int y = 5;
    Main inst = new Main();
    return inst.test(x, y, 9);
  }

  /*
   * test IF_ICMPNE  bytecode  (Note: javac compiles "==" to IF_ICMPNE)
   */
  //@ ensures \result <==> (z != x && x == r);
  public boolean test(int x, int z, int r) {
    System.out.println("Testing ExSymExe28");
    if (z == x) {
      return false;
    } else System.out.println("branch FOO2");
    if (x == r) System.out.println("branch BOO1");
    else
      System.out.println("branch BOO2");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExe28.java:3: error: cannot find symbol
  //@ ensures \result <==> (z != x && x == r);
                            ^
  symbol:   variable z
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe28.java:3: error: cannot find symbol
  //@ ensures \result <==> (z != x && x == r);
                                 ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe28.java:3: error: cannot find symbol
  //@ ensures \result <==> (z != x && x == r);
                                      ^
  symbol:   variable x
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExe28.java:3: error: cannot find symbol
  //@ ensures \result <==> (z != x && x == r);
                                           ^
  symbol:   variable r
  location: class Main
4 errors

